codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupted_turn_pending_steers_message.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
expression: info
---
• Model interrupted to submit steer instructions.
