codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_submission_warning_snapshot.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
expression: last
---
⚠ Steer messages aren't supported during /review. Press Ctrl+C now to cancel the
  review.
